# project1_reshetnikova_vladislava_b25-555

./: Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  labirint_demo.cast  main.py  player_actions.py  utils.py
